<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_9"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b6"
        app:layout_constraintStart_toEndOf="@+id/b8" />

    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_8"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintStart_toEndOf="@+id/b7" />

    <Button
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_7"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_4"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_5"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintStart_toEndOf="@+id/b4" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_6"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintStart_toEndOf="@+id/b5" />

    <Button
        android:id="@+id/allclear"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ac"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/clearbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b6" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_1"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b00"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_2"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/b0"
        app:layout_constraintStart_toEndOf="@+id/b1" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_3"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/bstop"
        app:layout_constraintStart_toEndOf="@+id/b2" />

    <Button
        android:id="@+id/clearbtn"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/c"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/delbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b3" />

    <Button
        android:id="@+id/b0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_0"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b00" />

    <Button
        android:id="@+id/b00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_00"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="15dp"
        android:text="@string/stop"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b0" />

    <Button
        android:id="@+id/delbtn"
        android:layout_width="86dp"
        android:layout_height="51dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/x"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bstop" />

    <TextView
        android:id="@+id/metertxt"
        android:layout_width="235dp"
        android:layout_height="77dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/foottxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foottxt"
        android:layout_width="231dp"
        android:layout_height="74dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metertxt" />


    <TextView
        android:id="@+id/meterdescr"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/m"
        android:textColor="#F10606"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/footdescr"
        app:layout_constraintEnd_toStartOf="@+id/metertextr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footdescr"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ft"
        android:textColor="#F10606"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/foottextr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meterdescr" />

    <TextView
        android:id="@+id/metertextr"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:text="@string/meter"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/foottextr"
        app:layout_constraintStart_toEndOf="@+id/meterdescr"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foottextr"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="29dp"
        android:text="@string/foot"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/foottxt"
        app:layout_constraintStart_toEndOf="@+id/footdescr"
        app:layout_constraintTop_toBottomOf="@+id/metertextr" />


</androidx.constraintlayout.widget.ConstraintLayout>